--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.433.0",
     "aws-sdk": "^2.1478.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
