--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.433.0",
     "aws-sdk": "^2.1478.0",
+    "base64url": "^3.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "luxon": "^3.4.3",
     "typescript": "*"
