--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,30 @@ version: '3.8'
 services:
   node:
     build:
-      context: .
-      dockerfile: local.dockerfile
+      context: ./backend
+      dockerfile: ./local/local.dockerfile
     container_name: s3-api-node
     ports:
       - "3001:3001"
     env_file:
-      - .env.development
+      - ./backend/.env.development
+    environment:
+      - NODE_ENV=development
     volumes:
       - .:/app
+      - /app/backend/node_modules
       - ~/.aws:/root/.aws:ro
     command:  yarn run start
+  nextjs:
+    build:
+      context: ./frontend
+      dockerfile: ./local/local.dockerfile
+    container_name: s3-api-nextjs
+    ports:
+      - "3000:3000"
+    environment:
+      - NODE_ENV=development
+    volumes:
+      - .:/app
+      - /app/frontend/node_modules
+    command:  npm run dev
